--- a/app/views/categorias_locales/categorias_locales.module.css
+++ b/app/views/categorias_locales/categorias_locales.module.css
@@ -3,14 +3,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden; /* Evita el corrimiento horizontal */
+    overflow-x: hidden;
 }
 
 
 
 .imagenTiendaContainer {
     width: 100%;
-    height: 250px; /* Aumenta la altura para que ocupe más espacio */
+    height: 300px; 
     overflow: hidden;
     position: relative;
 }
@@ -18,7 +18,7 @@
 .imagenTienda {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Asegura que la imagen se ajuste al contenedor sin distorsionarse */
+    object-fit: cover;
 }
 
 .TituloCategorias {
@@ -26,7 +26,7 @@
     text-align: center; 
     margin: 0;
     font-size: 1.5rem;
-    color: #333;
+    color: #000000;
     font-weight: bold;
 }
 
@@ -49,53 +49,100 @@
     padding: 20px;
     max-width: 600px;
     margin: 0 auto;
-    background-color: aqua;
-    overflow: hidden; /* Asegura que no haya desplazamiento vertical */
+    background-color: rgb(247, 247, 247);
+    overflow: hidden; 
+    position: relative;
+    margin-top: -20px;
+    z-index: 1; 
+    border-radius: 22px 22px 0 0  ; 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+}
+.containerDetalleTienda{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 1rem;
 }
 
 .productosContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 15px;
 }
+.containerDireccion{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: rgb(94, 94, 94);
+}
+.direccion{
+    text-decoration: underline;
+    
+}
+.containerHorario{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: rgb(94, 94, 94);
+}
+
 
 .productoCard {
-    border: 1px solid #ddd;
     padding: 10px;
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
-.productoCard:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
+
 
 .productoImg {
-    width: 100%;
+    width: 50%;
     height: 150px;
+    aspect-ratio: 2 / 2;
     object-fit: cover;
     border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+ 
 }
 
 .productoInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     margin-top: 10px;
-    text-align: center;
     width: 100%;
+    margin: .5rem;
 }
 
 .productoInfo h2 {
-    font-size: 1.2rem;
+    font-size: .9rem;
     color: #333;
 }
 
 .productoInfo p {
-    font-size: 1rem;
-    color: #28a745;
+    font-size: 25px;
+    color: #000000;
     margin: 5px 0;
+    font-weight: bold;
+
+}
+.botonCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto; /* Esto empuja el botón hacia abajo */
+    background-color: #3273ff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.botonCard:hover {
+    background-color: #2268ff;
 }
