--- a/app/views/productos/productos.module.css
+++ b/app/views/productos/productos.module.css
@@ -127,11 +127,13 @@
       gap: 50px;
      text-align: center;
      margin: 1rem;
+     ;
     }
     .CategoriesDentro{
       display: flex;
       flex-direction: column;
       gap: 10px;
+      margin-bottom: 2rem
       
     }
     .CategoriesDentro p {
