--- a/app/views/categorias/categorias.module.css
+++ b/app/views/categorias/categorias.module.css
@@ -11,15 +11,30 @@
 .VolverHeader {
     margin: 1rem;
 }
-
+.contendedorHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 20px; 
+}
 .AHeader {
-    text-decoration: none;
+    display: flex;
+    align-items: center;
     color: black;
+    margin-right: auto;
 }
 
 .HeaderTitle {
     text-align: center;
     margin-bottom: 20px;
+}
+.categoriaTitle{
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
+    font-size: 1.5rem; 
+    font-weight: 600;
 }
 
 .TituloCategorias {
