--- a/app/views/Inicio/home.module.css
+++ b/app/views/Inicio/home.module.css
@@ -73,10 +73,10 @@
     }
 
     .btn {
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 1.5rem;
         font-size: 1rem;
         color: white;
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         border: none;
         border-radius: 5px;
     }
